{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Camera",
            "id": "45f3e056-2432-45fd-9d77-e6a02b6fd376",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "f7852d52-f45f-4b5d-8518-fd4afb3f773b",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2,StickDeadzone",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Control",
                    "type": "Button",
                    "id": "f3589ddc-34d8-4e5d-94bc-b69d5c940b9d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Rotation",
                    "type": "Value",
                    "id": "64e1d733-61e6-4123-a392-7e3e802f15de",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Position",
                    "type": "Value",
                    "id": "0e84b2a9-3635-44b7-8932-1b11fdac7b20",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseDrag",
                    "type": "PassThrough",
                    "id": "63c2e6a1-82fe-43d9-9777-76db8f263fde",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "MouseDrag",
                    "initialStateCheck": true
                },
                {
                    "name": "Scroll",
                    "type": "PassThrough",
                    "id": "70a02b4d-d0aa-4e1a-a371-219d07c48ac3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "98471c14-c7d1-4552-89cd-3ab2fe6ecc8b",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "98c0d843-cbce-44e6-af94-8cfc472261dc",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "b86ce45e-b7c6-43fa-9291-e8f0cfafbb9e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e8da060c-a7b1-4701-a989-baff1cb694b7",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b7b6df40-a062-43c9-ba50-2f015f078af7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "QE",
                    "id": "63ffaa08-176b-4844-ab2c-4416d1e84a94",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "37adb410-beaa-4b5a-b702-16b2f126d51f",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "95fe17df-94e8-4a9f-976e-c35e6f78b995",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "8bfadc3a-bf32-4aed-bd99-1a6d1e28cee9",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Mouse Drag",
                    "id": "9b225047-6cc9-4258-93c0-042afe4a0478",
                    "path": "MouseDrag",
                    "interactions": "MouseDrag",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDrag",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Button",
                    "id": "695f8582-6378-4843-b72b-57e81597b6de",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDrag",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Axis1",
                    "id": "7ee30dc2-7c60-4140-a547-d358a50997cb",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDrag",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Axis2",
                    "id": "8e46ed25-9cd6-4299-906e-25d21c153d9a",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDrag",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "7927fe2d-71f2-427d-a9ac-b3f6947da962",
                    "path": "<Mouse>/{ScrollVertical}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eeca79e7-b589-42bc-a9b7-14f3adeaf847",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Control",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Building",
            "id": "b87b9e2c-db2b-41a7-ae1d-5bba10c924f5",
            "actions": [
                {
                    "name": "Build/Destroy",
                    "type": "Button",
                    "id": "fceabfcc-6e56-4f8e-bf33-aeaee73fa490",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "da257640-4e1d-470a-80f4-5696e4dd7438",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "StartBuilding",
                    "type": "Button",
                    "id": "35439215-72f9-44b0-8b31-4d763bd28f3a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "StartDestruction",
                    "type": "Button",
                    "id": "140402b0-0182-42c2-9303-12af846c45d1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "925c796b-19d1-429e-9c49-165fcfc4f1fd",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Build/Destroy",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e66271a-17fe-4c60-9617-6a7eafabcb51",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dffa4054-b1a7-41d6-a358-4ecba5047c05",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "Scale(factor=0)",
                    "groups": "",
                    "action": "StartBuilding",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f57ab1b0-bc49-455c-adce-146e90a1f974",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "",
                    "action": "StartBuilding",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "673819a3-890d-46c7-894a-42bfd77cea1e",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "Scale(factor=2)",
                    "groups": "",
                    "action": "StartBuilding",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5f6722ac-dca3-4a91-a0fe-82e63b3cfdac",
                    "path": "<Keyboard>/minus",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartDestruction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}